<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        card_view:cardCornerRadius="2dp"
        card_view:elevation="8dp">


        <android.support.constraint.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/overviewValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/primaryText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/rateChart"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/overview_text" />

            <TextView
                android:id="@+id/releaseDateLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:textColor="@color/primaryText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.972"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/overviewValueTextView"
                tools:text="@string/release_date_label" />

            <com.txusballesteros.widgets.FitChart
                android:id="@+id/rateChart"
                android:layout_width="63dp"
                android:layout_height="62dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="28dp"
                app:animationMode="overdraw"
                app:backStrokeColor="@color/offWhiteBackground"
                app:layout_constraintBottom_toTopOf="@+id/releaseDateLabelTextView"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeSize="6dp"
                app:valueStrokeColor="@color/colorAccent">

            </com.txusballesteros.widgets.FitChart>

            <TextView
                android:id="@+id/averageVoteLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textColor="@color/primaryText"
                app:layout_constraintBottom_toBottomOf="@+id/rateChart"
                app:layout_constraintEnd_toEndOf="@+id/rateChart"
                app:layout_constraintStart_toStartOf="@+id/rateChart"
                app:layout_constraintTop_toTopOf="@+id/rateChart"
                tools:text="@string/average_rate_label" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>